--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-fastapi==0.115.4;
-uvicorn==0.32.0;
 python-dotenv==1.0.1;
-pydantic==2.9.2;
-pdf2image==1.17.0;
 langchain==0.3.3;
 langchain-openai==0.2.2;
 langchain-community==0.3.2;
-logtail-python==0.3.1;
-azure-storage-blob==12.24.0;
-supabase==2.10.0;
-asyncpg==0.30.0;
-bcrypt==4.2.1;
-PyJWT==2.8.0;
+streamlit==1.40.1;
+langgraph==0.2.62;
+typing_extensions==4.12.2;
