--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-python-dotenv==1.0.1
-langchain==0.3.3
-langchain-openai==0.2.2
-langchain_chroma==0.2.0
-langchain-community==0.3.2
-streamlit==1.40.1
-langgraph==0.2.62
-typing_extensions==4.12.2
+python-dotenv==1.0.1;
+langchain==0.3.3;
+langchain-openai==0.2.2;
+langchain_chroma==0.2.0;
+langchain-community==0.3.2;
+streamlit==1.40.1;
+langgraph==0.2.62;
+typing_extensions==4.12.2;
